# KW-X12-Parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
kw_x12_edi_parser/: README.md  __init__.py
kw_x12_edi_parser/x837p/: README.md  __init__.py  write_claims.py
kw_x12_edi_parser/x837p/utils/: claim_models.py
kw_x12_edi_parser/x837p/workflow/: edi_sample_25_claims.txt  workflow.ipynb
kw_x12_edi_parser/x837p/x837p_edi_examples/: README.md  __init__.py  edi_sample_50_claims.txt  edi_sample_75_claims.txt  generate_samples.py
kw_x12_parser/: README.md  __init__.py
kw_x12_parser/x837p/: README.md  __init__.py  api.py  write_claims.py
kw_x12_parser/x837p/utils/: dataframe_to_edi.py  hierarchical_parser.py  raw_block_parser.py  segment_parser.py
kw_x12_parser/x837p/workflow/: edi_sample_25_claims.txt  workflow.ipynb
kw_x12_parser/x837p/x837p_edi_examples/: README.md  edi_sample_25_claims.txt  generate_samples.py
parsers/: README.md  __init__.py
parsers/x837p/: README.md  __init__.py  write_claims.py
parsers/x837p/utils/: __init__.py  dataframe_to_edi.py  full_column_mapper.py  raw_block_parser.py
parsers/x837p/workflow/: edi_sample_25_claims.txt  workflow.ipynb
