[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edi-parser"
version = "0.1.0"
description = "A Python library to parse X12 EDI files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["edi", "x12", "837", "healthcare", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
dataframe = ["pandas>=1.0.0"]  # For to_claims_dataframe, write_claims_to_edi

[project.scripts]
write-claims = "parsers.x837p.write_claims:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["parsers*"]
