[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kw-x12-parser"
version = "0.1.5"
description = "Parse and write X12 healthcare EDI claims"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    {name = "Rohan Kamath", email = "rkamath1610@gmail.com"}
]
keywords = ["edi", "x12", "837", "healthcare", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rohanrkamath/KW-X12-Parser"
Issues = "https://github.com/rohanrkamath/KW-X12-Parser/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
dataframe = ["pandas>=1.0.0"]  # For to_claims_dataframe, write_claims_to_edi

[project.scripts]
write-claims = "kw_x12_parser.x837p.write_claims:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kw_x12_parser*"]
